# hse_python_web

./: README.md
fastapi-project/: pyvenv.cfg
fastapi-project/Scripts/: activate  activate.bat  activate.fish
practice/: script.js
restapi_blog/: .gitignore  SCREENSHOTS.md  blog_data.json  litlle_test.py  main.py  requirements.txt  start.py
restapi_blog/app_stuff/: __init__.py  pages.py  posts.py  users.py
restapi_blog/core/: config.py  exceptions.py
restapi_blog/hw2/database/: ddl.sql  er_diagram.md
restapi_blog/hw2/quality/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
restapi_blog/main_structures/: __init__.py  main.py
restapi_blog/models/: __init__.py  post.py  user.py
restapi_blog/routers/: __init__.py  posts.py  users.py
restapi_blog/schemas/: __init__.py  post.py  user.py
restapi_blog/screenshots/: errors.md
restapi_blog/services/: __init__.py  post_service.py  user_service.py
restapi_blog/static/css/: style.css
restapi_blog/storage/: __init__.py  files.py
restapi_blog/templates/: base.html  create_post.html  create_user.html  edit_post.html  index.html  login.html  register.html  view_post.html
restapi_blog/utils/: __init__.py  storage.py
task_to_14_09_2026/: consts.py  ips-between-task1.py  ips-between.py  pyvenv.cfg  requirements.txt  task2Main.py
task_to_14_09_2026/Scripts/: activate  activate.bat  activate.fish
task_to_14_09_2026/task2Processes/: monitorResults.py  monitorSites.py
